--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "@craco/craco": "^7.1.0",
+    "@craco/craco": "^7.0.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^2.2.2",
@@ -20,9 +20,10 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "framer-motion": "^12.9.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.3.1",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.3",
     "web-vitals": "^2.1.4"
